// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ToDoList component disable the update button when clicking edit icon again 1`] = `
<div>
  <div
    class="min-h-screen"
  >
    <div
      class="flex flex-col flex-wrap gap-5 justify-center items-center"
    >
      <div
        class="flex justify-between items-center w-[95%] lg:w-[75%] border border-bordercolor p-5 text-3xl rounded-xl"
      >
        <div
          class="mr-10 lg:mr-7 text-justify break-all no-underline"
        >
          Go for a walk
        </div>
        <div
          class="flex flex-col sm:flex-row gap-5 justify-center items-center"
        >
          <div
            class="flex "
          >
            <label
              class="sr-only"
              for="statusundefined"
            >
              Status
            </label>
            <input
              class="size-8"
              id="statusundefined"
              type="checkbox"
            />
          </div>
          <div
            aria-label="Task Update"
            class="cursor-pointer no-underline"
            role="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-pen-fancy "
              data-icon="pen-fancy"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M373.5 27.1C388.5 9.9 410.2 0 433 0c43.6 0 79 35.4 79 79c0 22.8-9.9 44.6-27.1 59.6L277.7 319l-10.3-10.3-64-64L193 234.3 373.5 27.1zM170.3 256.9l10.4 10.4 64 64 10.4 10.4-19.2 83.4c-3.9 17.1-16.9 30.7-33.8 35.4L24.3 510.3l95.4-95.4c2.6 .7 5.4 1.1 8.3 1.1c17.7 0 32-14.3 32-32s-14.3-32-32-32s-32 14.3-32 32c0 2.9 .4 5.6 1.1 8.3L1.7 487.6 51.5 310c4.7-16.9 18.3-29.9 35.4-33.8l83.4-19.2z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            aria-label="Task Delete"
            class="cursor-pointer no-underline"
            role="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-trash-can "
              data-icon="trash-can"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M135.2 17.7C140.6 6.8 151.7 0 163.8 0L284.2 0c12.1 0 23.2 6.8 28.6 17.7L320 32l96 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 96C14.3 96 0 81.7 0 64S14.3 32 32 32l96 0 7.2-14.3zM32 128l384 0 0 320c0 35.3-28.7 64-64 64L96 512c-35.3 0-64-28.7-64-64l0-320zm96 64c-8.8 0-16 7.2-16 16l0 224c0 8.8 7.2 16 16 16s16-7.2 16-16l0-224c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16l0 224c0 8.8 7.2 16 16 16s16-7.2 16-16l0-224c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16l0 224c0 8.8 7.2 16 16 16s16-7.2 16-16l0-224c0-8.8-7.2-16-16-16z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToDoList component dispatche DELETE_TASK when trash icon is clicked 1`] = `
<div>
  <div
    class="min-h-screen"
  >
    <div
      class="flex flex-col flex-wrap gap-5 justify-center items-center"
    >
      <div
        class="flex justify-between items-center w-[95%] lg:w-[75%] border border-bordercolor p-5 text-3xl rounded-xl"
      >
        <div
          class="mr-10 lg:mr-7 text-justify break-all no-underline"
        >
          Go for a walk
        </div>
        <div
          class="flex flex-col sm:flex-row gap-5 justify-center items-center"
        >
          <div
            class="flex "
          >
            <label
              class="sr-only"
              for="status0"
            >
              Status
            </label>
            <input
              class="size-8"
              id="status0"
              type="checkbox"
            />
          </div>
          <div
            aria-label="Task Update"
            class="cursor-pointer no-underline"
            role="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-pen-fancy "
              data-icon="pen-fancy"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M373.5 27.1C388.5 9.9 410.2 0 433 0c43.6 0 79 35.4 79 79c0 22.8-9.9 44.6-27.1 59.6L277.7 319l-10.3-10.3-64-64L193 234.3 373.5 27.1zM170.3 256.9l10.4 10.4 64 64 10.4 10.4-19.2 83.4c-3.9 17.1-16.9 30.7-33.8 35.4L24.3 510.3l95.4-95.4c2.6 .7 5.4 1.1 8.3 1.1c17.7 0 32-14.3 32-32s-14.3-32-32-32s-32 14.3-32 32c0 2.9 .4 5.6 1.1 8.3L1.7 487.6 51.5 310c4.7-16.9 18.3-29.9 35.4-33.8l83.4-19.2z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            aria-label="Task Delete"
            class="cursor-pointer no-underline"
            role="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-trash-can "
              data-icon="trash-can"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M135.2 17.7C140.6 6.8 151.7 0 163.8 0L284.2 0c12.1 0 23.2 6.8 28.6 17.7L320 32l96 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 96C14.3 96 0 81.7 0 64S14.3 32 32 32l96 0 7.2-14.3zM32 128l384 0 0 320c0 35.3-28.7 64-64 64L96 512c-35.3 0-64-28.7-64-64l0-320zm96 64c-8.8 0-16 7.2-16 16l0 224c0 8.8 7.2 16 16 16s16-7.2 16-16l0-224c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16l0 224c0 8.8 7.2 16 16 16s16-7.2 16-16l0-224c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16l0 224c0 8.8 7.2 16 16 16s16-7.2 16-16l0-224c0-8.8-7.2-16-16-16z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToDoList component dispatche TOGGLE_TASK when checkbox is clicked 1`] = `
<div>
  <div
    class="min-h-screen"
  >
    <div
      class="flex flex-col flex-wrap gap-5 justify-center items-center"
    >
      <div
        class="flex justify-between items-center w-[95%] lg:w-[75%] border border-bordercolor p-5 text-3xl rounded-xl"
      >
        <div
          class="mr-10 lg:mr-7 text-justify break-all no-underline"
        >
          Go for a walk
        </div>
        <div
          class="flex flex-col sm:flex-row gap-5 justify-center items-center"
        >
          <div
            class="flex "
          >
            <label
              class="sr-only"
              for="status0"
            >
              Status
            </label>
            <input
              class="size-8"
              id="status0"
              type="checkbox"
            />
          </div>
          <div
            aria-label="Task Update"
            class="cursor-pointer no-underline"
            role="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-pen-fancy "
              data-icon="pen-fancy"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M373.5 27.1C388.5 9.9 410.2 0 433 0c43.6 0 79 35.4 79 79c0 22.8-9.9 44.6-27.1 59.6L277.7 319l-10.3-10.3-64-64L193 234.3 373.5 27.1zM170.3 256.9l10.4 10.4 64 64 10.4 10.4-19.2 83.4c-3.9 17.1-16.9 30.7-33.8 35.4L24.3 510.3l95.4-95.4c2.6 .7 5.4 1.1 8.3 1.1c17.7 0 32-14.3 32-32s-14.3-32-32-32s-32 14.3-32 32c0 2.9 .4 5.6 1.1 8.3L1.7 487.6 51.5 310c4.7-16.9 18.3-29.9 35.4-33.8l83.4-19.2z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            aria-label="Task Delete"
            class="cursor-pointer no-underline"
            role="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-trash-can "
              data-icon="trash-can"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M135.2 17.7C140.6 6.8 151.7 0 163.8 0L284.2 0c12.1 0 23.2 6.8 28.6 17.7L320 32l96 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 96C14.3 96 0 81.7 0 64S14.3 32 32 32l96 0 7.2-14.3zM32 128l384 0 0 320c0 35.3-28.7 64-64 64L96 512c-35.3 0-64-28.7-64-64l0-320zm96 64c-8.8 0-16 7.2-16 16l0 224c0 8.8 7.2 16 16 16s16-7.2 16-16l0-224c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16l0 224c0 8.8 7.2 16 16 16s16-7.2 16-16l0-224c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16l0 224c0 8.8 7.2 16 16 16s16-7.2 16-16l0-224c0-8.8-7.2-16-16-16z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToDoList component dispatches SET_TASK action after 5 seconds 1`] = `
<div>
  <div
    class="min-h-screen"
  >
    <div
      class="flex justify-center items-center"
    >
      <img
        alt="No Tasks to do"
        src="test-file-stub"
      />
    </div>
  </div>
</div>
`;

exports[`ToDoList component displays a loading spinner initially 1`] = `
<div>
  <div
    class="min-h-screen"
  >
    <div
      class="flex justify-center items-center gap-5 text-4xl font-bold"
      role="status"
    >
      <svg
        aria-hidden="true"
        class="w-8 h-8 text-gray-200 animate-spin dark:text-gray-600 fill-[#979696] border-4"
        fill="none"
        viewBox="0 0 100 101"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z"
          fill="currentColor"
        />
        <path
          d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z"
          fill="currentFill"
        />
      </svg>
      <span>
        Fetching Data
      </span>
    </div>
  </div>
</div>
`;

exports[`ToDoList component enable task to get update 1`] = `
<div>
  <div
    class="min-h-screen"
  >
    <div
      class="flex flex-col flex-wrap gap-5 justify-center items-center"
    >
      <div
        class="flex justify-between items-center w-[95%] lg:w-[75%] border border-bordercolor p-5 text-3xl rounded-xl"
      >
        <div
          class="mr-10 lg:mr-7 text-justify break-all no-underline"
        >
          <label
            class="sr-only"
            for="update0"
          >
            Update Task
          </label>
          <input
            class="bg-secondary rounded-2xl pl-2 p-1 w-[100%]"
            id="update0"
            type="input"
            value="Go for a walk"
          />
        </div>
        <div
          class="flex flex-col sm:flex-row gap-5 justify-center items-center"
        >
          <div
            class="flex "
          >
            <label
              class="sr-only"
              for="status0"
            >
              Status
            </label>
            <input
              class="size-8"
              id="status0"
              type="checkbox"
            />
          </div>
          <div
            aria-label="Task Update"
            class="cursor-pointer no-underline"
            role="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-pen-fancy "
              data-icon="pen-fancy"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M373.5 27.1C388.5 9.9 410.2 0 433 0c43.6 0 79 35.4 79 79c0 22.8-9.9 44.6-27.1 59.6L277.7 319l-10.3-10.3-64-64L193 234.3 373.5 27.1zM170.3 256.9l10.4 10.4 64 64 10.4 10.4-19.2 83.4c-3.9 17.1-16.9 30.7-33.8 35.4L24.3 510.3l95.4-95.4c2.6 .7 5.4 1.1 8.3 1.1c17.7 0 32-14.3 32-32s-14.3-32-32-32s-32 14.3-32 32c0 2.9 .4 5.6 1.1 8.3L1.7 487.6 51.5 310c4.7-16.9 18.3-29.9 35.4-33.8l83.4-19.2z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            aria-label="Task Delete"
            class="cursor-pointer no-underline"
            role="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-trash-can "
              data-icon="trash-can"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M135.2 17.7C140.6 6.8 151.7 0 163.8 0L284.2 0c12.1 0 23.2 6.8 28.6 17.7L320 32l96 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 96C14.3 96 0 81.7 0 64S14.3 32 32 32l96 0 7.2-14.3zM32 128l384 0 0 320c0 35.3-28.7 64-64 64L96 512c-35.3 0-64-28.7-64-64l0-320zm96 64c-8.8 0-16 7.2-16 16l0 224c0 8.8 7.2 16 16 16s16-7.2 16-16l0-224c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16l0 224c0 8.8 7.2 16 16 16s16-7.2 16-16l0-224c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16l0 224c0 8.8 7.2 16 16 16s16-7.2 16-16l0-224c0-8.8-7.2-16-16-16z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToDoList component render tasks when passed as props 1`] = `
<div>
  <div
    class="min-h-screen"
  >
    <div
      class="flex flex-col flex-wrap gap-5 justify-center items-center"
    >
      <div
        class="flex justify-between items-center w-[95%] lg:w-[75%] border border-bordercolor p-5 text-3xl rounded-xl"
      >
        <div
          class="mr-10 lg:mr-7 text-justify break-all no-underline"
        >
          Go for a walk
        </div>
        <div
          class="flex flex-col sm:flex-row gap-5 justify-center items-center"
        >
          <div
            class="flex "
          >
            <label
              class="sr-only"
              for="status0"
            >
              Status
            </label>
            <input
              class="size-8"
              id="status0"
              type="checkbox"
            />
          </div>
          <div
            aria-label="Task Update"
            class="cursor-pointer no-underline"
            role="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-pen-fancy "
              data-icon="pen-fancy"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M373.5 27.1C388.5 9.9 410.2 0 433 0c43.6 0 79 35.4 79 79c0 22.8-9.9 44.6-27.1 59.6L277.7 319l-10.3-10.3-64-64L193 234.3 373.5 27.1zM170.3 256.9l10.4 10.4 64 64 10.4 10.4-19.2 83.4c-3.9 17.1-16.9 30.7-33.8 35.4L24.3 510.3l95.4-95.4c2.6 .7 5.4 1.1 8.3 1.1c17.7 0 32-14.3 32-32s-14.3-32-32-32s-32 14.3-32 32c0 2.9 .4 5.6 1.1 8.3L1.7 487.6 51.5 310c4.7-16.9 18.3-29.9 35.4-33.8l83.4-19.2z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            aria-label="Task Delete"
            class="cursor-pointer no-underline"
            role="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-trash-can "
              data-icon="trash-can"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M135.2 17.7C140.6 6.8 151.7 0 163.8 0L284.2 0c12.1 0 23.2 6.8 28.6 17.7L320 32l96 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 96C14.3 96 0 81.7 0 64S14.3 32 32 32l96 0 7.2-14.3zM32 128l384 0 0 320c0 35.3-28.7 64-64 64L96 512c-35.3 0-64-28.7-64-64l0-320zm96 64c-8.8 0-16 7.2-16 16l0 224c0 8.8 7.2 16 16 16s16-7.2 16-16l0-224c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16l0 224c0 8.8 7.2 16 16 16s16-7.2 16-16l0-224c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16l0 224c0 8.8 7.2 16 16 16s16-7.2 16-16l0-224c0-8.8-7.2-16-16-16z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToDoList component shows "No Tasks" image when tasks are empty and loading is false 1`] = `
<div>
  <div
    class="min-h-screen"
  >
    <div
      class="flex justify-center items-center"
    >
      <img
        alt="No Tasks to do"
        src="test-file-stub"
      />
    </div>
  </div>
</div>
`;
